Update tomcat-upgrade.sh